2006-03-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolordisplayeditor.c
	* app/widgets/gimpcontrollereditor.c
	* app/widgets/gimpcontrollerlist.c: set tooltips dynamically.

2006-03-03  Sven Neumann  <sven@gimp.org>

	* app/dialogs/vectors-import-dialog.c (vectors_import_dialog_new)
	* app/widgets/gimpfiledialog.c (gimp_file_dialog_add_filters):
	fixed capitalization of filter names.

2006-03-03  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb: 
	* app/dialogs/file-open-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/file/file-open.[ch]
	* app/widgets/gimplayertreeview.c: pass the selected load procedure
	to file_open_layer() or NULL if none is selected. Fixes bug #333207.

	* app/pdb/fileops_cmds.c: regenerated.

2006-03-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_query): use proper sentinel type
	for gtk_dialog_set_alternative_button_order. Fixes bug #330800.

2006-03-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.c (gimp_image_real_flush): made it a static
	function (was accidentially non-static).

2006-03-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppickable.[ch]: added new methods ::get_bytes() and
	::flush()

	* app/core/gimpchannel.c
	* app/core/gimpdrawable.c
	* app/core/gimpimagemap.c
	* app/core/gimpprojection.c: implement ::get_bytes()

	* app/core/gimpprojection.c: implement ::flush() (immediately
	process both the idle renderer's queue and the unflushed update
	areas, to make sure that any reading from the projection will
	re-construct it).

	* app/core/gimp-edit.c
	* app/core/gimpchannel.c
	* app/core/gimpimage-contiguous-region.c
	* app/core/gimpimage-crop.c
	* app/core/gimppalette-import.c
	* app/paint/gimpclone.c
	* app/tools/gimpbycolorselecttool.c
	* app/tools/gimpiscissorstool.c
	* tools/pdbgen/pdb/image.pdb: use the pickable interface more
	consistently when reading from any drawable or the projection, and